# Kinopio-S

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Contributing.md  README.md
data/: functions.csv
lib/al/Factory/: ActorFactory.h  Factory.h
lib/al/LiveActor/: LiveActor.h
lib/al/Nerve/: Nerve.h  NerveKeeper.h  NerveStateBase.h  NerveStateCtrl.h
lib/al/System/: ByamlData.h  ByamlHeader.h  ByamlIter.h
src/: CMakeLists.txt
src/al/: CMakeLists.txt
src/al/Factory/: ActorFactory.cpp  CMakeLists.txt
src/al/LiveActor/: CMakeLists.txt  LiveActor.cpp
src/al/Nerve/: CMakeLists.txt  NerveStateBase.cpp
src/al/System/: ByamlIter.cpp  CMakeLists.txt
tools/: config.toml  setup.py
